--- a/documentation/src/main/asciidoc/mapper-orm-mapping.asciidoc
+++ b/documentation/src/main/asciidoc/mapper-orm-mapping.asciidoc
@@ -293,7 +293,7 @@ or <<backend-elasticsearch-field-types,Elasticsearch field types>> depending on 
 |java.time.YearMonth|-
 |java.time.MonthDay|-
 |java.util.Calendar|A `java.time.ZonedDateTime` representing the same date/time and timezone.
-|java.util.Date|`toInstant()` as a `java.time.Instant`
+|java.util.Date|`toInstant()` as a `java.time.Instant`; see <<mapper-orm-legacy-date-time-apis>>
 |java.util.UUID|`toString()` as a `java.lang.String`
 |====
 
@@ -334,6 +334,62 @@ along with the value of the document identifier, i.e. the value passed to the un
 
 [[mapper-orm-bridge-routingkeybridge]]
 === Routing key bridges
+
+include::todo-placeholder.asciidoc[]
+
+[[mapper-orm-legacy-date-time-apis]]
+=== Support for legacy date/time APIs
+
+Hibernate Search uses the `java.time` APIs introduced in Java 8 to model date/time values internally.
+As a result, legacy date/time objects such as `java.util.Calendar` or `java.util.Date`
+need to be converted to a `java.time` type before they can be indexed.
+
+Hibernate Search keeps things simple:
+`java.util.Date`, `java.util.Calendar`, etc. will be converted using their time-value (number of milliseconds since the epoch),
+and will assume it represents the same date/time in Java 8 APIs.
+
+For all dates after 1900, this will work exactly as expected.
+
+Before 1900, indexing and searching through Hibernate Search APIs will also work as expected,
+but *if you need to access the index natively*, for example through direct HTTP calls to an Elasticsearch server,
+you will notice that the indexed values are slightly "off".
+This is caused by differences in the implementation of `java.time` and legacy date/time APIs
+which lead to slight differences in the interpretation of time-values (number of milliseconds since the epoch).
+
+The "drifts" are consistent: they will also happen when building a predicate,
+and they will happen in the opposite direction when projecting.
+As a result, the differences will not be visible from an application relying on the Hibernate Search APIs exclusively.
+They will, however, be visible when accessing indexes natively.
+
+For the large majority of use cases, this will not be a problem.
+If this behavior is not acceptable for your application,
+you should look into implementing custom <<mapper-orm-bridge-valuebridge,value bridges>>
+and instructing Hibernate Search to use them by default for `java.util.Date`, `java.util.Calendar`, etc.:
+see <<mapper-orm-bridge-resolver>>.
+
+[TIP]
+====
+Technically, conversions are difficult because the `java.time` APIs
+and the legacy date/time APIs do not have the same internal calendar.
+
+In particular:
+
+* `java.time` assumes a "Local Mean Time" before 1900, while legacy date/time APIs do not support it
+(https://bugs.openjdk.java.net/browse/JDK-6281408[JDK-6281408]),
+As a result, time values (number of milliseconds since the epoch) reported by the two APIs
+will be different for dates before 1900.
+* `java.time` uses a proleptic Gregorian calendar before October 15, 1582,
+meaning it acts as if the Gregorian calendar, along with its system of leap years, had always existed.
+Legacy date/time APIs, on the other hand, use the Julian calendar before that date (by default),
+meaning the leap years are not exactly the same ones.
+As a result, some dates that are deemed valid by one API will be deemed invalid by the other,
+for example February 29, 1500.
+
+Those are the two main problems, but there may be others.
+====
+
+[[mapper-orm-bridge-resolver]]
+=== Default bridge resolver
 
 include::todo-placeholder.asciidoc[]
 
